# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: project-check.yml
gendiff/: __init__.py  gendiff.py
gendiff/scripts/: gendiff.py
gendiff/src/: cli.py  data_loader.py  diff_generator.py  file_handlers.py  file_work.py  gendiff.py
gendiff/src/formatter/: json.py  plain.py  stylish.py  visualizer.py
tests/: test_gendiff.py
tests/fixtures/responses/: json_nested.txt
