[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Simple tool for get difference from two JSON or YAML files"
authors = ["Viktor Sklyuev <sklyevv@yandex.ru>"]
license = "None"
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
